kubernetes/manifests/monitors/uptime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
  name: uptime-kuma
  namespace: monitors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1.23.15-alpine
          imagePullPolicy: IfNotPresent
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: uptime-http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma
      restartPolicy: Always
      volumes:
        - name: uptime-kuma
          persistentVolumeClaim:
            claimName: pvc-uptime-kuma
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: monitors
spec:
  ports:
    - name: uptime-http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: uptime-kuma
  type: ClusterIP
  clusterIP: 10.43.243.181
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitors
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kuma.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
